[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/3D/basic_enemy_navmesh/basic_enemy_navmesh.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/destroyable/destroyable.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
mid_height = 3.0

[sub_resource type="CapsuleShape" id=3]
height = 3.0

[sub_resource type="GDScript" id=5]
script/source = "extends Area
"

[sub_resource type="CylinderShape" id=4]
radius = 2.0

[node name="basic_enemy_navmesh" type="KinematicBody" groups=[
"destroyable",
]]
script = ExtResource( 1 )

[node name="destroyable" parent="." instance=ExtResource( 2 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
script = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.381627, 0 )
shape = SubResource( 4 )

[connection signal="on_death" from="destroyable" to="." method="_on_destroyable_on_death"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
